infrastructure/cdk.out/NexusBioNetworkingStack.template.json
{
 "Resources": {
  "NexusBioVPCA3321769": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "NexusBioNetworkingStack/NexusBioVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/Resource"
   }
  },
  "NexusBioVPCPublicSubnetSubnet1SubnetC4C77E4C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PublicSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NexusBioVPCA3321769"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet1/Subnet"
   }
  },
  "NexusBioVPCPublicSubnetSubnet1RouteTable1F97C866": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NexusBioVPCA3321769"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet1/RouteTable"
   }
  },
  "NexusBioVPCPublicSubnetSubnet1RouteTableAssociationBDD7C51A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NexusBioVPCPublicSubnetSubnet1RouteTable1F97C866"
    },
    "SubnetId": {
     "Ref": "NexusBioVPCPublicSubnetSubnet1SubnetC4C77E4C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet1/RouteTableAssociation"
   }
  },
  "NexusBioVPCPublicSubnetSubnet1DefaultRoute4CAA649D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NexusBioVPCIGWD645D355"
    },
    "RouteTableId": {
     "Ref": "NexusBioVPCPublicSubnetSubnet1RouteTable1F97C866"
    }
   },
   "DependsOn": [
    "NexusBioVPCVPCGWED953A7C"
   ],
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet1/DefaultRoute"
   }
  },
  "NexusBioVPCPublicSubnetSubnet1EIPF81C35C1": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet1/EIP"
   }
  },
  "NexusBioVPCPublicSubnetSubnet1NATGateway24BCBC9C": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "NexusBioVPCPublicSubnetSubnet1EIPF81C35C1",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "NexusBioVPCPublicSubnetSubnet1SubnetC4C77E4C"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet1"
     }
    ]
   },
   "DependsOn": [
    "NexusBioVPCPublicSubnetSubnet1DefaultRoute4CAA649D",
    "NexusBioVPCPublicSubnetSubnet1RouteTableAssociationBDD7C51A"
   ],
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet1/NATGateway"
   }
  },
  "NexusBioVPCPublicSubnetSubnet2SubnetE8BF887B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PublicSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NexusBioVPCA3321769"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet2/Subnet"
   }
  },
  "NexusBioVPCPublicSubnetSubnet2RouteTable5A51BB2B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NexusBioVPCA3321769"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet2/RouteTable"
   }
  },
  "NexusBioVPCPublicSubnetSubnet2RouteTableAssociation23668FDC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NexusBioVPCPublicSubnetSubnet2RouteTable5A51BB2B"
    },
    "SubnetId": {
     "Ref": "NexusBioVPCPublicSubnetSubnet2SubnetE8BF887B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet2/RouteTableAssociation"
   }
  },
  "NexusBioVPCPublicSubnetSubnet2DefaultRoute5926C465": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NexusBioVPCIGWD645D355"
    },
    "RouteTableId": {
     "Ref": "NexusBioVPCPublicSubnetSubnet2RouteTable5A51BB2B"
    }
   },
   "DependsOn": [
    "NexusBioVPCVPCGWED953A7C"
   ],
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PublicSubnetSubnet2/DefaultRoute"
   }
  },
  "NexusBioVPCPrivateSubnetSubnet1SubnetD697271F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PrivateSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "NexusBioNetworkingStack/NexusBioVPC/PrivateSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NexusBioVPCA3321769"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PrivateSubnetSubnet1/Subnet"
   }
  },
  "NexusBioVPCPrivateSubnetSubnet1RouteTableE1FBDD67": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NexusBioNetworkingStack/NexusBioVPC/PrivateSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NexusBioVPCA3321769"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PrivateSubnetSubnet1/RouteTable"
   }
  },
  "NexusBioVPCPrivateSubnetSubnet1RouteTableAssociation340B041E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NexusBioVPCPrivateSubnetSubnet1RouteTableE1FBDD67"
    },
    "SubnetId": {
     "Ref": "NexusBioVPCPrivateSubnetSubnet1SubnetD697271F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PrivateSubnetSubnet1/RouteTableAssociation"
   }
  },
  "NexusBioVPCPrivateSubnetSubnet1DefaultRoute9B4058C6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NexusBioVPCPublicSubnetSubnet1NATGateway24BCBC9C"
    },
    "RouteTableId": {
     "Ref": "NexusBioVPCPrivateSubnetSubnet1RouteTableE1FBDD67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PrivateSubnetSubnet1/DefaultRoute"
   }
  },
  "NexusBioVPCPrivateSubnetSubnet2Subnet29FC0BF9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PrivateSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "NexusBioNetworkingStack/NexusBioVPC/PrivateSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NexusBioVPCA3321769"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PrivateSubnetSubnet2/Subnet"
   }
  },
  "NexusBioVPCPrivateSubnetSubnet2RouteTable956010C4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NexusBioNetworkingStack/NexusBioVPC/PrivateSubnetSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NexusBioVPCA3321769"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PrivateSubnetSubnet2/RouteTable"
   }
  },
  "NexusBioVPCPrivateSubnetSubnet2RouteTableAssociation6786FD43": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NexusBioVPCPrivateSubnetSubnet2RouteTable956010C4"
    },
    "SubnetId": {
     "Ref": "NexusBioVPCPrivateSubnetSubnet2Subnet29FC0BF9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PrivateSubnetSubnet2/RouteTableAssociation"
   }
  },
  "NexusBioVPCPrivateSubnetSubnet2DefaultRouteC7B6E750": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NexusBioVPCPublicSubnetSubnet1NATGateway24BCBC9C"
    },
    "RouteTableId": {
     "Ref": "NexusBioVPCPrivateSubnetSubnet2RouteTable956010C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/PrivateSubnetSubnet2/DefaultRoute"
   }
  },
  "NexusBioVPCIGWD645D355": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NexusBioNetworkingStack/NexusBioVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/IGW"
   }
  },
  "NexusBioVPCVPCGWED953A7C": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "NexusBioVPCIGWD645D355"
    },
    "VpcId": {
     "Ref": "NexusBioVPCA3321769"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/NexusBioVPC/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WOzQqDMBCEn8V7TG0o9CxSSi9FtHgta9zS+JOUZKMU8d2LWMxpZj6GYQQXZ8GTCCYXy6aLe1XzuSSQHYPJPVEKPlcfybKXrvKM5b7ulSx9rZFWFlxhPOED6h4DDyx1zkgFpIzey6u53PJV7kBXIJzgy3KrRiAMwzdNaDXuhe3JP6VEIN8DalpYgc54K3Fh2jTIW3cYxYmLI0+i1ikVW69JDciLTX9ltfv1+gAAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "NexusBioNetworkingStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefNexusBioVPCPublicSubnetSubnet1SubnetC4C77E4C0665FC44": {
   "Value": {
    "Ref": "NexusBioVPCPublicSubnetSubnet1SubnetC4C77E4C"
   },
   "Export": {
    "Name": "NexusBioNetworkingStack:ExportsOutputRefNexusBioVPCPublicSubnetSubnet1SubnetC4C77E4C0665FC44"
   }
  },
  "ExportsOutputRefNexusBioVPCPublicSubnetSubnet2SubnetE8BF887BF2901C85": {
   "Value": {
    "Ref": "NexusBioVPCPublicSubnetSubnet2SubnetE8BF887B"
   },
   "Export": {
    "Name": "NexusBioNetworkingStack:ExportsOutputRefNexusBioVPCPublicSubnetSubnet2SubnetE8BF887BF2901C85"
   }
  },
  "ExportsOutputRefNexusBioVPCA3321769C971BC5B": {
   "Value": {
    "Ref": "NexusBioVPCA3321769"
   },
   "Export": {
    "Name": "NexusBioNetworkingStack:ExportsOutputRefNexusBioVPCA3321769C971BC5B"
   }
  },
  "ExportsOutputRefNexusBioVPCPrivateSubnetSubnet1SubnetD697271F0454F5CF": {
   "Value": {
    "Ref": "NexusBioVPCPrivateSubnetSubnet1SubnetD697271F"
   },
   "Export": {
    "Name": "NexusBioNetworkingStack:ExportsOutputRefNexusBioVPCPrivateSubnetSubnet1SubnetD697271F0454F5CF"
   }
  },
  "ExportsOutputRefNexusBioVPCPrivateSubnetSubnet2Subnet29FC0BF9AED8ED84": {
   "Value": {
    "Ref": "NexusBioVPCPrivateSubnetSubnet2Subnet29FC0BF9"
   },
   "Export": {
    "Name": "NexusBioNetworkingStack:ExportsOutputRefNexusBioVPCPrivateSubnetSubnet2Subnet29FC0BF9AED8ED84"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
